--- a/walk.html
+++ b/walk.html
@@ -18,6 +18,7 @@
 				font-family: "Courier New", Courier, monospace;
 				font-size: 16px;
 				color: white;/*#034f84;*/
+				text-align: center;
 			}
 			ol{		  
 				list-style-type: lower-alpha;
@@ -27,11 +28,7 @@
 	</head>
 
 	<body>
-		<p>CONGRATULATIONS!</p> 
-		<ol>
-			<li><a href="/regional.html">regional train</a></li>
-			<li><a href="/sbahn.html">s-bahn</a></li>
-			<li><a href="/walk.html">walk</a></li>
-		</ol>
+		<p>So you took the regional train, a long commute made a little more enjoyable.</p> 
+		<a href="/ontime.html">next</a>
 	</body>
 </html>
