--- a/new.html
+++ b/new.html
@@ -32,7 +32,7 @@
 		<p>You show up for your first day and their babysitter cancelled on them last minute. They're desperate and brought their daughter to work but the new exhibition is going up and they can't have her running around. Do you...</p>
 		<ol>
 			<li><a href="/kid.html">Decide to look after the girl while they install the artworks.</a></li>
-			<li><a href="/desk.html">Man the desk</a></li>
+			<li><a href="/002.html">Man the desk</a></li>
 		</ol>
 	</body>
 </html>
