--- a/001.html
+++ b/001.html
@@ -28,7 +28,8 @@
 	</head>
 
 	<body>
-		<p>So you decided to walk. It's good excercise considering you went from pankow to Brandenburg but you arrive too late and miss your meeting. Unfortuneately unpaid interns cannot be late to work and you are fired.</p> 
-		<a href="/new.html">next</a>
+		<p>Because of this you go on to create a mind blowing conceptual art installation that takes the art world by storm. You become an overnight sensation. You get your own studio in Prenzlauerberg and now you take on unpaid interns of your own. You remember fondly when you were in their position, if they work just as hard as you do doing what you love one day they'll also be like you, you think to yourself.</p>
+		<a href="/end.html">exit</a>
+		<a href="/index.html">play again</a>
 	</body>
 </html>
