--- a/003.html
+++ b/003.html
@@ -28,7 +28,8 @@
 	</head>
 
 	<body>
-		<p>So you decided to walk. It's good excercise considering you went from pankow to Brandenburg but you arrive too late and miss your meeting. Unfortuneately unpaid interns cannot be late to work and you are fired.</p> 
-		<a href="/new.html">next</a>
+		<p>The rest of your internship falls into a routine, you go around Berlin attending art openings, helping out your mentor where you can, and meeting other artists. You develop a few new skills while also putting the ones you know to use. At the end of the internship, you've fostered meaningful connections and experiences that will help you in your career.</p>
+		<a href="/end.html">exit</a>
+		<a href="/index.html">play again</a>
 	</body>
 </html>
