--- a/coffee.html
+++ b/coffee.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<p>So you decided to walk. It's good excercise considering you went from pankow to Brandenburg but you arrive too late and miss your meeting. Unfortuneately unpaid interns cannot be late to work and you are fired.</p> 
-		<a href="/new.html">next</a>
+		<p>You go to the coffee shop where they have free wifi and plenty of outlets. You finish your work and head to the next item on the agenda. </p> 
+		<a href="/003.html">next</a>
 	</body>
 </html>
