--- a/erktemp.html
+++ b/erktemp.html
@@ -28,12 +28,11 @@
 	</head>
 
 	<body>
-		<p>You meet with your mentor and head off to the platform. She's always on the go, she has to be, otherwise things won't get done. 
-		</p> 
-		<p>She wants to make sure you get a worthwhile experience and don't waste your time. She asks, "What are your goals?"</p>
+		<p>Due to your internship you are also on the go, all around Berlin. You're internship takes you to Erkner and Tempelhof, all the way to zone c. Good thing you have a semester abc bvg pass.</p>
+		<p>After you're internship meetings however you still need to do work for your classes. Where do you decide to go?</p>
 		<ol>
-			<li><a href="/erktemp.html">I want to expand my skill set while getting a feel for the city.</a></li>
-			<li><a href="/workout.html">I'm not sure what I want to do...</a></li>
+			<li><a href="/soho.html">Soho house</a></li>
+			<li><a href="/coffee.html">A coffee shop that is halfway between pankow and Tempelhof</a></li>
 		</ol>
 	</body>
 </html>
