--- a/kid.html
+++ b/kid.html
@@ -28,11 +28,11 @@
 	</head>
 
 	<body>
-		<p>You decide to try again and look for a new internship. Luckily you found a gallery nearby that is looking for interns. It's family run and very hands-on, seems like a stellar opportunity. You go for an interview and they love you and your resume, congrats!</p>
-		<p>You show up for your first day and their babysitter cancelled on them last minute. They're desperate and brought their daughter to work but the new exhibition is going up and they can't have her running around. Do you...</p>
+		<p>You take the girl out for a walk but you're unsure of how to proceed. Baby-sitting is not what you had in mind when you signed up for this internship but you are an unpaid intern. The kid wants to play on a playground structure that looks dangerous.</p>
+		<p>Do you let her go?</p>
 		<ol>
-			<li><a href="/kid.html">Decide to look after the girl while they install the artworks.</a></li>
-			<li><a href="/desk.html">Man the desk</a></li>
+			<li><a href="/yes.html">yes</a></li>
+			<li><a href="/no.html">no</a></li>
 		</ol>
 	</body>
 </html>
