--- a/soho.html
+++ b/soho.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<p>So you decided to walk. It's good excercise considering you went from pankow to Brandenburg but you arrive too late and miss your meeting. Unfortuneately unpaid interns cannot be late to work and you are fired.</p> 
-		<a href="/new.html">next</a>
+		<p>You show up to the restaurant/high fashion store/co-working space that is Soho House. They have free wifi and plenty of tables to work at, so you get away with being there. There are plenty other nomadic creative people that go to work there and it inspires you to work. It's a good collaborative atmosphere, so much so that you get to talking with a fellow creative and start to develop an innovative new idea...</p> 
+		<a href="/001.html">next</a>
 	</body>
 </html>
