--- a/yes.html
+++ b/yes.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<p>So you decided to walk. It's good excercise considering you went from pankow to Brandenburg but you arrive too late and miss your meeting. Unfortuneately unpaid interns cannot be late to work and you are fired.</p> 
-		<a href="/new.html">next</a>
+		<p>You let her go play on the structure and watch her closely. While you're watching her play you get distracted and look around the neighborhood. You notice all the colors, and all the sounds, and all the people and get inspired... </p>
+		<a href="/001.html">next</a>
 	</body>
 </html>
