--- a/new.html
+++ b/new.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<p>You decide to try again and look for a new internship. Luckily you found a gallery nearby that is looking for interns. It's family run and very hands-on, seems like a stellar opportunity. You go for an interview and they love you and your resume, congrats!</p>
+		<p>You decide to try again and look for a new internship. Luckily you found a gallery nearby that is looking for interns. It's family run and very hands-on, it seems like a stellar opportunity. You go for an interview and they love you and your resume, congrats!</p>
 		<p>You show up for your first day and their babysitter cancelled on them last minute. They're desperate and brought their daughter to work but the new exhibition is going up and they can't have her running around. Do you...</p>
 		<ol>
 			<li><a href="/kid.html">Decide to look after the girl while they install the artworks.</a></li>
