--- a/no.html
+++ b/no.html
@@ -28,7 +28,7 @@
 	</head>
 
 	<body>
-		<p>So you decided to walk. It's good excercise considering you went from pankow to Brandenburg but you arrive too late and miss your meeting. Unfortuneately unpaid interns cannot be late to work and you are fired.</p> 
-		<a href="/new.html">next</a>
+		<p>You spent enough time walking around the neighborhood and convince the girl to head back to the gallery. The parents/your bosses are finished installing the works and take their daughter back. You're asked to organize financial documents because they never got around to it but now that you're here it can finally get done.</p>
+		<a href="/002.html">next</a>
 	</body>
 </html>
