--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
 				font-size: 16px;
+				text-shadow: white 0px 0px 10px;
+
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
@@ -28,6 +30,8 @@
 
 	<body>
 		<p>CONGRATULATIONS!</p> 
+		<p>You landed an internship in Berlin! It's unpaid... but it'll be a great experience. It's your first week in Berlin and your first meeting is in Potsdam.</p>
+		<p>How are you going to get there?</p>
 		<ol>
 			<li><a href="/regional.html">regional train</a></li>
 			<li><a href="/sbahn.html">s-bahn</a></li>
