--- a/001.html
+++ b/001.html
@@ -12,24 +12,27 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
 			ol{		  
 				list-style-type: lower-alpha;
 			}
-
+.tab { 
+            display: inline-block; 
+            margin-left: 40px; 
+        } 
 		</style>
 	</head>
 
 	<body>
-		<p>Because of this you go on to create a mind blowing conceptual art installation that takes the art world by storm. You become an overnight sensation. You get your own studio in Prenzlauerberg and now you take on unpaid interns of your own. You remember fondly when you were in their position, if they work just as hard as you do doing what you love one day they'll also be like you, you think to yourself.</p>
-		<a href="/end.html">exit</a>
-		<a href="/index.html">play again</a>
+		<p>Because of this you go on to create a mind blowing conceptual art installation that takes the art world by storm. You become an overnight sensation. You get your own studio in Prenzlauerberg and now you take on unpaid interns of your own. You remember fondly when you were in their position, if they work just as hard as you did doing what you love, one day they'll also be like you.</p>
+		<p><a href="/end.html">exit</a><span class="tab"></span><a href="/index.html">play again</a></p>
 	</body>
 </html>
