--- a/002.html
+++ b/002.html
@@ -12,24 +12,30 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
 			ol{		  
 				list-style-type: lower-alpha;
 			}
+			.tab { 
+            display: inline-block; 
+            margin-left: 40px; 
+        } 
 
 		</style>
 	</head>
 
 	<body>
 		<p>The rest of your internship is ineventful. You welcome guests to the gallery, help out with the events, and occasionally sweep the floors.</p>
-		<a href="/end.html">exit</a>
-		<a href="/index.html">play again</a>
+		<p>At the end of the internship you have a new line on your resume.</p>
+		<p><a href="/end.html">exit</a><span class="tab"></span><a href="/index.html">play again</a>
+		</p>
 	</body>
 </html>
