--- a/003.html
+++ b/003.html
@@ -12,24 +12,28 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
 			ol{		  
 				list-style-type: lower-alpha;
 			}
+			.tab { 
+            display: inline-block; 
+            margin-left: 40px; 
+        } 
 
 		</style>
 	</head>
 
 	<body>
 		<p>The rest of your internship falls into a routine, you go around Berlin attending art openings, helping out your mentor where you can, and meeting other artists. You develop a few new skills while also putting the ones you know to use. At the end of the internship, you've fostered meaningful connections and experiences that will help you in your career.</p>
-		<a href="/end.html">exit</a>
-		<a href="/index.html">play again</a>
+		<p><a href="/end.html">exit</a><span class="tab"></span><a href="/index.html">play again</a></p>
 	</body>
 </html>
