--- a/end.html
+++ b/end.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 			}
 			ol{		  
@@ -32,7 +33,7 @@
 	</head>
 
 	<body>
-		<h3>thank you!</h3>
+		<h3>thank you for playing!</h3>
 		<p>This is the end of the game. </p> 
 	</body>
 </html>
