--- a/erktemp.html
+++ b/erktemp.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,11 +29,11 @@
 	</head>
 
 	<body>
-		<p>Due to your internship you are also on the go, all around Berlin. You're internship takes you to Erkner and Tempelhof, all the way to zone c. Good thing you have a semester abc bvg pass.</p>
+		<p>Because of your internship you are also on the go, all around Berlin. You're internship takes you all the way to Erkner and Tempelhof, often to Zone C of Berlin. Good thing you have a semester ABC/BVG pass.</p>
 		<p>After you're internship meetings however you still need to do work for your classes. Where do you decide to go?</p>
 		<ol>
 			<li><a href="/soho.html">Soho house</a></li>
-			<li><a href="/coffee.html">A coffee shop that is halfway between pankow and Tempelhof</a></li>
+			<li><a href="/coffee.html">A coffee shop that is halfway between Pankow and Tempelhof</a></li>
 		</ol>
 	</body>
 </html>
