--- a/kid.html
+++ b/kid.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>You take the girl out for a walk but you're unsure of how to proceed. Baby-sitting is not what you had in mind when you signed up for this internship but you are an unpaid intern. The kid wants to play on a playground structure that looks dangerous.</p>
+		<p>You take the girl out for a walk but you're unsure of how to proceed. Baby-sitting is not what you had in mind when you signed up for this internship but hopefully you will get something out of this in the end. The kid wants to play on a playground structure that looks dangerous.</p>
 		<p>Do you let her go?</p>
 		<ol>
 			<li><a href="/yes.html">yes</a></li>
