--- a/new.html
+++ b/new.html
@@ -12,11 +12,13 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;								
+				text-shadow: white 0px 0px 10px;
+
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,11 +30,11 @@
 	</head>
 
 	<body>
-		<p>You decide to try again and look for a new internship. Luckily you found a gallery nearby that is looking for interns. It's family run and very hands-on, it seems like a stellar opportunity. You go for an interview and they love you and your resume, congrats!</p>
+		<p>You decide to try again and look for a new internship. Luckily you find a gallery nearby that is looking for interns. It's family run and very hands-on, it seems like a great opportunity. You go for an interview and they love you and your resume, congrats!</p>
 		<p>You show up for your first day and their babysitter cancelled on them last minute. They're desperate and brought their daughter to work but the new exhibition is going up and they can't have her running around. Do you...</p>
 		<ol>
 			<li><a href="/kid.html">Decide to look after the girl while they install the artworks.</a></li>
-			<li><a href="/002.html">Man the desk</a></li>
+			<li><a href="/002.html">Man the front desk and let them deal with the kid</a></li>
 		</ol>
 	</body>
 </html>
