--- a/no.html
+++ b/no.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>You spent enough time walking around the neighborhood and convince the girl to head back to the gallery. The parents/your bosses are finished installing the works and take their daughter back. You're asked to organize financial documents because they never got around to it but now that you're here it can finally get done.</p>
+		<p>You spent enough time walking around the neighborhood and convince the girl to head back to the gallery. The parents/your bosses are finished installing the works and take their daughter back. You're asked to organize financial documents because they can never get around to it but now that you're here it can finally get done.</p>
 		<a href="/002.html">next</a>
 	</body>
 </html>
