--- a/ontime.html
+++ b/ontime.html
@@ -12,11 +12,13 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
+
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,8 +30,8 @@
 	</head>
 
 	<body>
-		<p>You make it to the meeting on time. </p> 
-		<p>You set a next meeting and agree to meet at Hauptbahnhof.</p>
+		<p>You make it to the meeting on time. They usually discuss in German but since you don't understand German they switch to English. Good thing everyone in Berlin knows English, that way you don't have to know German while in Germany!</p> 
+		<p>You try to contribute to the meeting but you also don't know what's going on, this is the first time you meet your mentor. You don't if you should even try to jump in. They finish their meeting and that leaves little time for you to actually meet your mentor. You set a date for your next meeting the following week. You go back to Pankow.</p>
 		<a href="/secondmeeting.html">next</a>
 	</body>
 </html>
