--- a/regional.html
+++ b/regional.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>So you took the regional train, a long commute made a little more enjoyable.</p> 
+		<p>So you took the regional train, its a long commute and you're surprised to see so many people on the train. There are people from all walks of life, men in business suits, students doing readings, little old ladies with groceries. It's so packed you're afraid you might not be able to leave the train when it's your stop. You wonder what led them to take such long commutes.</p> 
 		<a href="/ontime.html">next</a>
 	</body>
 </html>
