--- a/secondmeeting.html
+++ b/secondmeeting.html
@@ -12,11 +12,13 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
+
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,9 +30,9 @@
 	</head>
 
 	<body>
-		<p>You meet with your mentor and head off to the platform. She's always on the go, she has to be, otherwise things won't get done. 
+		<p>You meet with your mentor at Hauptbahnhof and head off to the platform. She's always on the go, she has to be, otherwise things won't get done. The train station was the best meeting spot for her. 
 		</p> 
-		<p>She wants to make sure you get a worthwhile experience and don't waste your time. She asks, "What are your goals?"</p>
+		<p>Once on board the train you start discussing the purpose of the internship. She wants to make sure you get a worthwhile experience and don't waste your time. She asks, "What are your goals?"</p>
 		<ol>
 			<li><a href="/erktemp.html">I want to expand my skill set while getting a feel for the city.</a></li>
 			<li><a href="/workout.html">I'm not sure what I want to do...</a></li>
