--- a/soho.html
+++ b/soho.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>You show up to the restaurant/high fashion store/co-working space that is Soho House. They have free wifi and plenty of tables to work at, so you get away with being there. There are plenty other nomadic creative people that go to work there and it inspires you to work. It's a good collaborative atmosphere, so much so that you get to talking with a fellow creative and start to develop an innovative new idea...</p> 
+		<p>You show up to the restaurant/high fashion store/co-working space that is Soho House. They have free wifi and plenty of tables to work at, so you get away with being there. There are plenty other nomadic creative people that go work there and it inspires you to work. It's a good collaborative atmosphere, so much so that you get to talking with a fellow creative and start to develop an innovative new idea...</p> 
 		<a href="/001.html">next</a>
 	</body>
 </html>
