--- a/walk.html
+++ b/walk.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>So you decided to walk. It's good excercise considering you went from pankow to Brandenburg but you arrive too late and miss your meeting. Unfortuneately unpaid interns cannot be late to work and you are fired.</p> 
+		<p>So you decided to walk. It's good excercise considering you went from Pankow to Potsdam but you arrive too late and miss your meeting. Unfortunately unpaid interns cannot be late to work and you are fired.</p> 
 		<a href="/new.html">next</a>
 	</body>
 </html>
