--- a/sbahn.html
+++ b/sbahn.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>So you took the regional train, a long commute made a little more enjoyable.</p> 
-		<a href="/ontime.html">next</a>
+		<p>You took the s-bahn. It takes a while to get to Potsdam but you even get there before your internship mentor. It's your first time meeting your mentor and you jump right into the working meeting. You're expected to contribute and take initiative. This is after all your opportunity to show that you have what it takes to do what you love and follow your dreams. You impress your mentor at your first meeting and set a date for your next meeting.</p> 
+		<a href="/secondmeeting.html">next</a>
 	</body>
 </html>
