--- a/workout.html
+++ b/workout.html
@@ -12,11 +12,12 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 16px;
+				font-size: 24px;				
+				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 16px;
+				font-size: 24px;
 				color: white;/*#034f84;*/
 				text-align: center;
 			}
@@ -28,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>Unfortunarely it seems like the internship wasn't a good fit.</p>
+		<p>Unfortunarely it seems like this internship wasn't a good fit.</p>
 		<a href="/new.html">next</a>
 	</body>
 </html>
