--- a/end.html
+++ b/end.html
@@ -12,18 +12,18 @@
 			p {		
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
-				font-size: 24px;				
+				font-size: 30px;				
 				text-shadow: white 0px 0px 10px;
 			}
 			a{
 				font-family: "Courier New", Courier, monospace;
-				font-size: 24px;
+				font-size: 30px;
 				color: white;/*#034f84;*/
 			}
 			ol{		  
 				list-style-type: lower-alpha;
 			}
-			h3 {
+			h1 {
 				font-family: "Courier New", Courier, monospace;	
 				text-align: center;
 				color: white;
@@ -33,7 +33,10 @@
 	</head>
 
 	<body>
-		<h3>thank you for playing!</h3>
-		<p>This is the end of the game. </p> 
+		<h1>Thank you for playing!</h1>
+
+		<br>
+
+		<p>Although different choices led to different outcomes, ultimately the decisions you made impact your results only as far as the circumstances allows. The reality is that often unpaid internships are out of the control of the interns and that is something that I wanted to illustrate in this game.</p> 
 	</body>
 </html>
