--- a/erktemp.html
+++ b/erktemp.html
@@ -29,7 +29,7 @@
 	</head>
 
 	<body>
-		<p>Because of your internship you are also on the go, all around Berlin. You're internship takes you all the way to Erkner and Tempelhof, often to Zone C of Berlin. Good thing you have a semester ABC/BVG pass.</p>
+		<p>Because of your internship you are also on the go, all around Berlin. You're internship takes you all the way to Erkner and Tempelhof, often to Zone C of Berlin. Good thing you have a semester BVG pass that covers all the zones in Berlin.</p>
 		<p>After you're internship meetings however you still need to do work for your classes. Where do you decide to go?</p>
 		<ol>
 			<li><a href="/soho.html">Soho house</a></li>
